syntax = "proto3";

package order_messages;

import "common/status.proto";

import "address.proto";
import "ordertotals.proto";
import "item.proto";
import "price.proto";

message OrderCreateRequest {
    optional string order_ref = 1;
    optional Address sold_to = 2;
}

message OrderCreateResponse {
    optional Order order = 1;
    common.Status status = 2;
}

message OrderGetRequest {
    string id = 1;
}

message OrderGetResponse {
    optional Order order = 1;
    common.Status status = 2;
}

message OrderDeleteRequest {
    string id = 1;
}

message OrderDeleteResponse {
    common.Status status = 1;
}

message Order {
    optional string id = 1;
    optional string order_ref = 2;
    optional Address sold_to = 3;
    optional Address bill_to = 4;
    repeated OrderItem order_items = 5;
    optional OrderTotals order_totals = 6;
}

message OrderItem {
    int32 line_num = 1;
    string order_id = 2;
    int32 quantity = 3;
    Item item = 4;
    Price price = 5;
    optional Address ship_to = 6;
    OrderTotals orderitem_totals =7;
}

